syntax = "proto3";

                 package wedInvWedding;
service WedInvWeddingService {
 rpc createWedInvWedding (WedInvWeddingCreateInput) returns (WedInvWedding) {}
rpc wedInvWeddings (findManyParams) returns (stream WedInvWedding) {}
rpc wedInvWedding (WedInvWeddingWhereUniqueInput) returns (WedInvWedding) {}
rpc updateWedInvWedding (WedInvWeddingUpdateInput) returns (WedInvWedding) {}
rpc deleteWedInvWedding (WedInvWeddingWhereUniqueInput) returns (WedInvWedding) {} 
 }
message WedInvWeddingCreateInput {
string createdAt = 1;
string father = 2;
repeated string gender = 3;
string id = 4;
string mother = 5;
string name = 6;
string photo = 7;
string updatedAt = 8;
};
message WedInvWedding {
string createdAt = 1;
string father = 2;
repeated string gender = 3;
string id = 4;
string mother = 5;
string name = 6;
string photo = 7;
string updatedAt = 8;
};
message WedInvWeddingWhereUniqueInput {
string createdAt = 1;
string father = 2;
repeated string gender = 3;
string id = 4;
string mother = 5;
string name = 6;
string photo = 7;
string updatedAt = 8;
};
message WedInvWeddingUpdateInput {
string createdAt = 1;
string father = 2;
repeated string gender = 3;
string id = 4;
string mother = 5;
string name = 6;
string photo = 7;
string updatedAt = 8;
};
message findManyParams {

};